133628 - Bug: Fix mute/unmute icon visibility in Safari and iPhone

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1460,10 +1460,22 @@ main .section.responsive-title h1 {
   background-color: var(--c-secondary-dark-gold, #87754e);
 }
 
+.video__mute-toggle-button .icon-muted,
+.video__mute-toggle-button .icon-unmuted {
+  display: none;
+  justify-content: center;
+}
+
 .video__mute-toggle-button .icon {
   /* color: var(--button-primary-bg); */
+  align-items: center;
   height: 100%;
   width: 100%;
+}
+
+.v2-video .video__mute-toggle-button .icon svg {
+  height: var(--video-mute-toggle-button-size);
+  width: var(--video-mute-toggle-button-size);
 }
 
 /* Section Background colors */
